<resources>
    <string name="app_name">Music Quiz</string>
    <string name="desc_image">desc_image</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="soumettre">Soumettre</string>
    <string name="votre_reponse">Votre réponse</string>
    <string name="display_result">Le titre était : %1$s</string>
    <string name="bravo">Bravo !</string>
    <string name="perdu">Perdu !</string>
    <string name="changer">Changer</string>
    <string name="start">START</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajouter_une_chanson">Ajouter une chanson</string>
    <string name="titre">Titre</string>
    <string name="url">URL</string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>
    <string name="add_title">Ajoutée à la liste : \nTitre : %1$s</string>
    <string name="add_url">URL : %1$s</string>

</resources>